pom changes to add mysql connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
 spring.application.name=pro
+
+# Server port
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/your_database_name?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update   # Change to 'none' in production
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# ✅ Flyway Migration (If Using)
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+
+
+# ✅ Swagger Configuration
+springdoc.paths-to-match=/admin/**, /student/**
+springdoc.packages-to-scan=com.example.pro.controller
+
+# ✅ Swagger UI Link
+# http://localhost:8080/swagger-ui/index.html
+
